--- a/WebFundamentals/CSS/Portfolio/index.html
+++ b/WebFundamentals/CSS/Portfolio/index.html
@@ -11,7 +11,7 @@
             <h3 id="master">Master of shadows and the Internet!</h3>
             <div id="body">
                 <div id="tophalf">
-                    <div id="portrait"><img id="photo" src="./Portfolio_images/photo_of_me.jpg" alt="Photo of me"></img></div>
+                    <div id="portrait"><img id="photo" src="./Portfolio_images/photo_of_me.jpg" alt="Photo of me"></div>
                     <div id="aboutme">
                         <h3 class="heading">About...</h3>
                         <p>Hello! I'm an extremely driven and creative Full Stack Developer who is currently open for career opportunities as a front-end of back-end web developer in the Greater Seattle Area.<br><br>
@@ -23,17 +23,17 @@
                 <div>
                     <div class="examples">
                         <h3 class="heading">La Mode</h3>
-                        <img class="projectphotos" src="./Portfolio_images/lamode.png"></img>
+                        <img class="projectphotos" src="./Portfolio_images/lamode.png" alt="La Mode preview">
                         <p>La Mode is an ECommerce website designed to market various clothing products. Users are able to view the available garments, select their desired quantity, and compile a shopping cart for making a final purchase.</p>
                     </div>
                     <div class="examples">
                         <h3 class="heading">Family Contacts</h3>
-                        <img class="projectphotos" src="./Portfolio_images/familycontacts.png"></img>
+                        <img class="projectphotos" src="./Portfolio_images/familycontacts.png" alt="Family Contacts preview">
                         <p>Family Contacts is a free application for managings, sharing, and visualizing your family relationships for both extended and immediate family. As an essential feature of the project, your log-in information determines who you can see and reveals how people are related to you.</p>
                     </div>
                     <div class="examples">
                         <h3 class="heading">fiveEleven</h3>
-                        <img class="projectphotos" src="./Portfolio_images/fiveEleven.png"></img>
+                        <img class="projectphotos" src="./Portfolio_images/fiveEleven.png" alt="fiveEleven preview">
                         <p>fiveEleven is a data visualization project built on the Python software stack. The application transforms the developer job-hunt into a more visual, user friendly experience. Based on location, technology popularity, and other vast data sets, users may easily visualize the varying sizes and concentrations of the junior developer job market across the nation.</p>
                     </div>
                 </div>
@@ -41,60 +41,58 @@
                     <div class="technologies">
                         <h3 class="heading">Technologies:</h3>
                         <div class="techinner">
-                            <img class="techlogos" src="./Portfolio_images/php.png">
-                            <img class="techlogos" src="./Portfolio_images/codeigniter.png">
-                            <img class="techlogos" src="./Portfolio_images/jQuery.png">
-                            <img class="techlogos" src="./Portfolio_images/ajax.png">
-                            <img class="techlogos" src="./Portfolio_images/mysql.png">
-                            <img class="techlogos" src="./Portfolio_images/HTML.png">
-                            <img class="techlogos" src="./Portfolio_images/CSS.png">
-                            <img class="techlogos" src="./Portfolio_images/bootstrap.png"><br>
-                            <center><button class="button">La Mode</button></center>
+                            <img class="techlogos" src="./Portfolio_images/php.png" alt="PHP logo">
+                            <img class="techlogos" src="./Portfolio_images/codeigniter.png" alt="CodeIgniter logo">
+                            <img class="techlogos" src="./Portfolio_images/jQuery.png" alt="jQuery logo">
+                            <img class="techlogos" src="./Portfolio_images/ajax.png" alt="AJAX logo">
+                            <img class="techlogos" src="./Portfolio_images/mysql.png" alt="mySQL logo">
+                            <img class="techlogos" src="./Portfolio_images/HTML.png" alt="HTML logo">
+                            <img class="techlogos" src="./Portfolio_images/CSS.png" alt="CSS logo">
+                            <img class="techlogos" src="./Portfolio_images/bootstrap.png" alt="Bootstrap logo"><br>
+                            <button class="button">La Mode</button>
                     </div>
                     </div>
                     <div class="technologies">
                         <h3 class="heading">Technologies:</h3>
                         <div class="techinner">
-                            <img class="techlogos" src="./Portfolio_images/JavaScript.png">
-                            <img class="techlogos" src="./Portfolio_images/mongodb.png">
-                            <img class="techlogos" src="./Portfolio_images/expressjs.png">
-                            <img class="techlogos" src="./Portfolio_images/angular.png">
-                            <img class="techlogos" src="./Portfolio_images/nodejs.png">
-                            <img class="techlogos" src="./Portfolio_images/HTML.png">
-                            <img class="techlogos" src="./Portfolio_images/CSS.png">
-                            <img class="techlogos" src="./Portfolio_images/socket.png"><br>
-                            <center><button class="button">Family Contacts</button></center>
+                            <img class="techlogos" src="./Portfolio_images/JavaScript.png" alt="JavaScript logo">
+                            <img class="techlogos" src="./Portfolio_images/mongodb.png" alt="mongoDB logo">
+                            <img class="techlogos" src="./Portfolio_images/expressjs.png" alt="ExpressJS logo">
+                            <img class="techlogos" src="./Portfolio_images/angular.png" alt="Angular logo">
+                            <img class="techlogos" src="./Portfolio_images/nodejs.png" alt="NodeJS logo">
+                            <img class="techlogos" src="./Portfolio_images/HTML.png" alt="HTML logo">
+                            <img class="techlogos" src="./Portfolio_images/CSS.png" alt="CSS logo">
+                            <img class="techlogos" src="./Portfolio_images/socket.png" alt="Socket logo"><br>
+                            <button class="button">Family Contacts</button>
                         </div>
                     </div>
                     <div class="technologies">
                         <h3 class="heading">Technologies:</h3>
                         <div class="techinner">
-                            <img class="techlogos" src="./Portfolio_images/python.png">
-                            <img class="techlogos" src="./Portfolio_images/django.png">
-                            <img class="techlogos" src="./Portfolio_images/d3.png">
-                            <img class="techlogos" src="./Portfolio_images/angular.png">
-                            <img class="techlogos" src="./Portfolio_images/sqlite.png">
-                            <img class="techlogos" src="./Portfolio_images/HTML.png">
-                            <img class="techlogos" src="./Portfolio_images/CSS.png">
-                            <img class="techlogos" src="./Portfolio_images/JavaScript.png">
-                            <img class="techlogos" src="./Portfolio_images/materialize.png"><br>
-                            <center><button class="button">fiveEleven</button></center>
+                            <img class="techlogos" src="./Portfolio_images/python.png" alt="Python logo">
+                            <img class="techlogos" src="./Portfolio_images/django.png" alt="Django logo">
+                            <img class="techlogos" src="./Portfolio_images/d3.png" alt="D3 logo">
+                            <img class="techlogos" src="./Portfolio_images/angular.png" alt="Angular logo">
+                            <img class="techlogos" src="./Portfolio_images/sqlite.png" alt="SQLite logo">
+                            <img class="techlogos" src="./Portfolio_images/HTML.png" alt="HTML logo">
+                            <img class="techlogos" src="./Portfolio_images/CSS.png" alt="CSS logo">
+                            <img class="techlogos" src="./Portfolio_images/JavaScript.png" alt="JavaScript logo">
+                            <img class="techlogos" src="./Portfolio_images/materialize.png" alt="Materialize logo"><br>
+                            <button class="button">fiveEleven</button>
                         </div>
                     </div>
                 </div>
             </div>
             <div id="footer">
-                <center>jdoe@gmail.com | 206-555-1212</center><br>
-                <center>
-                    <img class="socialmedia" src="./Portfolio_images/github.png"><img>
+                <p>jdoe@gmail.com | 206-555-1212</p>
+                    <img class="socialmedia" src="./Portfolio_images/github.png" alt="GitHub logo">
                     <a class="sociallink" href="#">jaynedev</a>
-                    <img class="socialmedia" src="./Portfolio_images/linkedin.png"><img>
+                    <img class="socialmedia" src="./Portfolio_images/linkedin.png" alt="LinkedIn logo">
                     <a class="sociallink" href="#">jayne-doe</a>
-                    <img class="socialmedia" src="./Portfolio_images/twitter.png"><img>
+                    <img class="socialmedia" src="./Portfolio_images/twitter.png" alt="Twitter logo">
                     <a class="sociallink" href="#">jdtweets</a>
-                    <img class="socialmedia" src="./Portfolio_images/codepen.png"><img>
+                    <img class="socialmedia" src="./Portfolio_images/codepen.png" alt="CodePen logo">
                     <a class="sociallink" href="#">jaynedev</a>
-                </center>
             </div>
         </div>
     </body>
