--- a/WebFundamentals/Javascript/jQuery/Contact Card/contactcard.html
+++ b/WebFundamentals/Javascript/jQuery/Contact Card/contactcard.html
@@ -6,18 +6,21 @@
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script type="text/javascript">
             $(document).ready(function() {
+
                 $('form').submit(function() {
                     var firstname = $('input[name=first]').val()
                     var lastname = $('input[name=last]').val()
                     var card = '<div class="card"><h2>' + firstname + ' ' + lastname + '</h2>' + '<p>' + 'Click for description' + '</p></div>'
+                    $('form')[0].reset();
                     $('body').append(card);
                     return false;
                 });
 
-                $(document).on("click", ".card", function(){
+                $(document).on("click", ".card", function() {
                     var description = $('textarea[name=desc]').val()
+                    console.log(description)
                     var newcard = '<p>' + description + '</p>'
-                    $('.card').html(newcard);
+                    $(this).html(newcard);
                 });
             });
         </script>
