--- a/WebFundamentals/Javascript/jQuery/Contact Card/contactcard.html
+++ b/WebFundamentals/Javascript/jQuery/Contact Card/contactcard.html
@@ -6,26 +6,25 @@
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script type="text/javascript">
             $(document).ready(function() {
-
+                var x = 0
                 $('form').submit(function() {
                     var firstname = $('input[name=first]').val()
                     var lastname = $('input[name=last]').val()
-                    var card = '<div class="card"><h2>' + firstname + ' ' + lastname + '</h2>' + '<p>' + 'Click for description' + '</p></div>'
+                    var desc = $('textarea[name=desc]').val()
+                    var card = '<div class="cardholder"><div class="card' + x+ '"><h2>' + firstname + ' ' + lastname + '</h2>' + '<p>' + 'Click for description' + '</p></div><div class="card' + x+ '" style="display:none;"><p>' + desc + '</p></div></div>'
                     $('form')[0].reset();
                     $('body').append(card);
+                    x++;
                     return false;
                 });
 
-                $(document).on("click", ".card", function() {
-                    var description = $('textarea[name=desc]').val()
-                    console.log(description)
-                    var newcard = '<p>' + description + '</p>'
-                    $(this).html(newcard);
+                $(document).on("click", ".cardholder", function() {
+                    $(this).children().toggle();
                 });
             });
         </script>
         <style>
-            .card{
+            .cardholder{
                 height: auto;
                 width: 300px;
                 font-family: sans-serif;
@@ -53,8 +52,5 @@
                 Description: <br><textarea type="text" name="desc" placeholder="Enter a description" rows="4" cols="30"></textarea><br>
                 <input type="submit" value="Add User">
             </form>
-        <div>
-
-        </div>
     </body>
 </html>
