--- a/mean/week1/1_monday/js_basics_ii.html
+++ b/mean/week1/1_monday/js_basics_ii.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>JS Basics Part 2</title>
+        <title>JS Basics II</title>
         <script type="text/javascript">
         function magic_multiply(x, y) {
             if (typeof x == 'number' && typeof y == 'number') {
