--- a/mean/week1/1_monday/js_basics_i.html
+++ b/mean/week1/1_monday/js_basics_i.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>JS Basics Part I</title>
+        <title>JS Basics I</title>
         <script type="text/javascript">
         // Basic 1
         // • Create a variable x as an empty array []. Log this array to your console.
