--- a/mean/week1/2_tuesday/js_dom_i.html
+++ b/mean/week1/2_tuesday/js_dom_i.html
@@ -3,44 +3,42 @@
     <head>
         <meta charset="utf-8">
         <title>JS DOM I</title>
-        <script type="text/javascript">
-        // Part I
-        // Create a function called star_string() that takes a number and returns a string of that many *. For example:
-        function star_string(num) {
-            let stars = '';                         // We start by creating an empty string that we will populate with stars
-            for (var i = 1; i <= num; i++) {        // This for loop will create a star based on the num argument we pass in
-                stars += '*';                       // This will concatenate one star to the same string each time we increment toward num
-            }
-            console.log(stars);                     // Show me the stars!
-        }
-        star_string(10)                             // Run it!
-
-        // Part II
-        // Create a function called draw_stars() that takes an array of numbers and prints out *.
-        function draw_stars(arr) {
-            for (var j = 0; j < arr.length; j++) {              // Simple for loop to iterate through the array
-                if (typeof arr[j] == 'string') {                // Check to see if the array item is a string. If so...
-                    let letters = '';                           // Similar to drawing stars, we will make an empty string for letters
-                    for (var k = 0; k < arr[j].length; k++) {   // This loop is intended to write a letter for each letter in the string (i.e. its length)
-                        letters += arr[j][0];                   // Since we only want the first letter, we write index 0 each time
-                        }
-                        console.log(letters.toLowerCase());     // Log it
-                    }
-                else if (typeof arr[j] == 'number') {           // If it's a number, refer back to star_string and print stars
-                    star_string(arr[j]);
-                }
-            }
-        }
-        let x = [4, 6, 1, 3, 5, 7, 25];              // Declare the array variable
-        draw_stars(x);                               // Run it!
-
-        // Part III
-        // Modify the function above. Allow an array containing integers and strings to be passed to the draw_stars() function. When a string is passed, instead of displaying *, display the first letter of the string according to the example below. You may use the .lower() string method for this part.
-        let y = [4, "Tom", 1, "Michael", 5, 7, "Jimmy Smith"];  // Declare a new array variable
-        draw_stars(y);                                          // Run it!
-        </script>
     </head>
     <body>
+        <h1>Students (appendList)</h1>
+        <!-- This ID will demonstrate the first function -->
+        <ul id="main">
 
+        </ul>
+
+        <h1>Students (superAppend)</h1>
+        <!-- This ID will demonstrate the second function -->
+        <ul id="main2">
+
+        </ul>
+        <script>
+            function appendList(array, id){                                     // Accept an array and an ID
+                for (var i = 0; i < array.length; i++) {                        // Iterate through each array item
+                    let new_li = document.createElement("li");                  // Create a tag for each item we will append
+                    new_li.innerHTML = array[i];                                // Toss the array index in as HTML
+                    document.getElementById(target_id).appendChild(new_li);     // Append our newly created HTML string into the existing "main" element
+                }
+            };
+
+            function superAppend(array, element, id){                           // SuperAppend! Now we can choose the type of tag by passing in an lement
+                for (var i = 0; i < array.length; i++) {
+                    let new_li = document.createElement(String(element));       // This is the only line that is different: it takes in an element argument
+                    new_li.innerHTML = array[i];                                // that we convert to a string so that our append method understands it
+                    document.getElementById(target_id2).appendChild(new_li);
+                }
+            };
+
+            let students = ["Jeff", "Jenny", "Javier", "Joslyn", "Joe", "Jane", "Django"];
+            let target_id = "main";                                             // This will make appendList only apply to the first list
+            let target_id2 = "main2";                                           // And superAppend only apply to the second list
+            let new_tag = "h3";                                                 // Here is the tag we pass in manually
+            appendList(students, target_id);                                    // Now we execute!
+            superAppend(students, new_tag, target_id2);
+        </script>
     </body>
 </html>
