--- a/mean/week1/1_monday/js_basics_i.html
+++ b/mean/week1/1_monday/js_basics_i.html
@@ -37,7 +37,7 @@
         //
         // • Now print every element except the final number.
         var z = [9, 10, 6, 5, -1, 20, 13, 2]
-        for (var i = 0; i < z.length - 1; i++) {
+        for (let i = 0; i < z.length - 1; i++) {
             console.log(z[i]);
         }
 
@@ -48,7 +48,7 @@
         //
         // • Now modify your code so only names with a length of 5 print.
         var names = ['Kadie', 'Joe', 'Fritz', 'Pierre', 'Alphonso']
-        for (var j = 0; j < names.length; j++) {
+        for (let j = 0; j < names.length; j++) {
             if (names[j].length == 5) {
             console.log(names[j]);
             }
