--- a/mean/week1/1_monday/js_math.html
+++ b/mean/week1/1_monday/js_math.html
@@ -7,7 +7,7 @@
         // Math 1
         // Write a function called zero_negativity(). This function should take an array. Return true if the input array contains no negative numbers, return false if it does.
         function zero_negativity(arr1) {
-            for (var i = 0; i < arr1.length; i++) {
+            for (let i = 0; i < arr1.length; i++) {
                 if (arr1[i] < 0) {
                     return false;
                 }
@@ -30,7 +30,7 @@
         // Write a function called how_many_even(). This function should take an array. Return the total number of elements in the array that are even. You may call is_even() to solve this.
         function how_many_even(arr2) {
             let total = 0
-            for (var j = 0; j < arr2.length; j++) {
+            for (let j = 0; j < arr2.length; j++) {
                 if (is_even(arr2[j])) {
                     total += 1;
                 }
@@ -43,7 +43,7 @@
         // Write a function called create_dummy_array(). This function should take a number n. Return an array of random numbers between 0 and 9 with the length of n.
         function create_dummy_array(n) {
             let dumarr = [];
-            for (var k = 0; k < n; k++) {
+            for (let k = 0; k < n; k++) {
                 let rand = Math.floor(Math.random() * 10);
                 dumarr.push(rand);
             }
