--- a/mean/week1/2_tuesday/js_dom_ii.html
+++ b/mean/week1/2_tuesday/js_dom_ii.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<!-- NOT COMPLETE -->
+
+<!-- <!DOCTYPE html>
 <html>
 <head>
 	<title>JS DOM II</title>
@@ -47,4 +49,4 @@
 	}
 	draw_table();
 </script>
-</html>
+</html> -->
